testing the converter script

--- a/problem set2/problem set2/problem set2.fsproj
+++ b/problem set2/problem set2/problem set2.fsproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Script1.fsx" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
+  <ItemGroup />
 
 </Project>
