--- a/problem set2/problem set2/problem set2.fsproj
+++ b/problem set2/problem set2/problem set2.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="quicksorting.fsx" />
     <None Include="Script1.fsx" />
     <Compile Include="Program.fs" />
   </ItemGroup>
