--- a/problem set2/problem set2/problem set2.fsproj
+++ b/problem set2/problem set2/problem set2.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="quest3.fsx" />
     <None Include="quest2.fsx" />
     <None Include="question11.fsx" />
     <None Include="quicksorting.fsx" />
