--- a/module3.2/module3.2/module3.2.fsproj
+++ b/module3.2/module3.2/module3.2.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="q1.fsx" />
     <None Include="vRestrictions.fsx" />
     <Compile Include="Program.fs" />
   </ItemGroup>
