experimenting with referencing and the imperative side of f#

--- a/module3.2/module3.2/module3.2.fsproj
+++ b/module3.2/module3.2/module3.2.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="refexample.fsx" />
     <None Include="ques5.fsx" />
     <None Include="Inlineexam.fsx" />
     <None Include="q1.fsx" />
