--- a/module3.2/module3.2/module3.2.fsproj
+++ b/module3.2/module3.2/module3.2.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="quest6.fsx" />
     <None Include="quest9.fsx" />
     <None Include="quest8.fsx" />
     <None Include="refexample.fsx" />
